--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -48,7 +48,7 @@ a:hover {
 
 .btn-primary {
   padding: 8px 20px;
-  background: #2b8fa1;
+  background: #0D3245;
   color: #fff;
   border-radius: 4px;
   border:none;
@@ -75,13 +75,13 @@ a:hover {
 }
 
 #breadcrumb {
-	background-color: #2b8fa1;
+	background-color: #0D3245;
 	margin-top: -20px;
 }
 
 .breadcrumb {
   list-style: none;
-  background-color: #2b8fa1;
+  background-color: #0D3245;
   border-radius: 0px;
   padding:3px 10px;
 }
@@ -123,15 +123,21 @@ a:hover {
 
 .nav-tabs {
 	border-bottom: 0;
+    margin-top: 15px;
+    font-size: 10px;
 }
 .nav-tabs > li {
 	float: left;
 	margin-bottom: 0;
 }
 .nav-tabs > li > a {
-	border-radius:0;
+    font-size: 13px;
 	color:#333;
-	padding:30px;
+	padding:10px;
+}
+
+.navbar-header .navbar-brand .img-responsive{
+    width: 180px;
 }
 
 .nav-tabs > li > a:hover {
@@ -154,6 +160,8 @@ a:hover {
 }
 
 @media (max-width: 767px) {
+
+
 	.navbar-brand {
 		padding-top: 6px;
 	}
@@ -344,7 +352,7 @@ a:hover {
 	margin-bottom:30px;
 	color:#fff;
 	padding:50px;
-	background:#2b8fa1;
+	background:#0D3245;
 	border-radius:50%;
 }
 
@@ -358,7 +366,7 @@ a:hover {
 
 .hi-icon-effect i.fa:hover {
 	background:#fff;
-	color: #2b8fa1;
+	color: #0D3245;
 	-webkit-transition: color 300ms, background-color 300ms;
   -moz-transition: color 300ms, background-color 300ms;
   -o-transition:  color 300ms, background-color 300ms;
@@ -592,7 +600,7 @@ a:hover {
 
 /* --- footer --- */
 .footer {
-	background:#2b8fa1;
+	background:#0D3245;
 	padding:15px 22px;
 }
 
@@ -848,7 +856,7 @@ ul.social-network li a {
 
 a.btn-primary:hover {
 	background-color:#ddd;
-	color:#2b8fa1;
+	color:#0D3245;
 }
 
 .widget {
@@ -877,7 +885,7 @@ a.btn-primary:hover {
 }
 
 .widget .entry-meta span a:hover {
-	color:#2b8fa1;
+	color:#0D3245;
 }
 
 .widget h3 {
@@ -906,12 +914,12 @@ a.btn-primary:hover {
 }
 
 .blog_category li a:hover{
-  background:#2b8fa1;
+  background:#0D3245;
   color: #fff;
 }
 
  .badge:before {
-  border-color: transparent transparent transparent #2b8fa1;
+  border-color: transparent transparent transparent #0D3245;
   border-style: solid;
   border-width: 10px;
   bottom: -8px;
@@ -923,7 +931,7 @@ a.btn-primary:hover {
 }
 
 .badge {
-  background-color: #2b8fa1;
+  background-color: #0D3245;
   border-radius: 5px;
   color: #fff;
   padding: 8px;
@@ -945,7 +953,7 @@ a.btn-primary:hover {
 }
 
 ul.blog_archieve li a:hover{
-	color:#2b8fa1;
+	color:#0D3245;
 }
 
 .blog_archieve li:first-child {
@@ -1066,7 +1074,7 @@ ul.faq li > div h3 {
 }
 
 #publish_date {
-  background: #2b8fa1;
+  background: #0D3245;
   border-bottom: 5px solid #4e4e4e;
   color: #fff;
   padding: 5px 0;
