--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -48,7 +48,7 @@ a:hover {
 
 .btn-primary {
   padding: 8px 20px;
-  background: #0D3245;
+  background: #6366f1;
   color: #fff;
   border-radius: 4px;
   border:none;
@@ -75,13 +75,13 @@ a:hover {
 }
 
 #breadcrumb {
-	background-color: #0D3245;
+	background-color: #6366f1;
 	margin-top: -20px;
 }
 
 .breadcrumb {
   list-style: none;
-  background-color: #0D3245;
+  background-color: #6366f1;
   border-radius: 0px;
   padding:3px 10px;
 }
@@ -107,7 +107,7 @@ a:hover {
 	font-weight:900;
 }
 .navbar-brand h1 span {
-	color: #2d7da4;
+	color: #6366f1;
 }
 
 .menu {
@@ -141,7 +141,7 @@ a:hover {
 }
 
 .nav-tabs > li > a:hover {
-	color: #2d7da4;
+	color: #6366f1;
 	border-color: #fff #fff #fff;
 	border-radius:0;
 	background-color:#fff;
@@ -151,7 +151,7 @@ a:hover {
 	-o-transition: all 0.3s ease-in-out;
 }
 .nav-tabs > li > a.active {
-	color: #2d7da4;
+	color: #6366f1;
 	border-radius:0;
 	transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
@@ -352,7 +352,7 @@ a:hover {
 	margin-bottom:30px;
 	color:#fff;
 	padding:50px;
-	background:#0D3245;
+	background:#6366f1;
 	border-radius:50%;
 }
 
@@ -366,7 +366,7 @@ a:hover {
 
 .hi-icon-effect i.fa:hover {
 	background:#fff;
-	color: #0D3245;
+	color: #6366f1;
 	-webkit-transition: color 300ms, background-color 300ms;
   -moz-transition: color 300ms, background-color 300ms;
   -o-transition:  color 300ms, background-color 300ms;
@@ -468,7 +468,7 @@ a:hover {
 
 .progress .color1,
 .progress .color1 .bar-width{
-  background: #2d7da4;
+  background: #6366f1;
 }
 
 .progress .color2,
@@ -532,7 +532,7 @@ a:hover {
 }
 
 .progress .color1 span:before{
-  border-color: #2d7da4 transparent transparent transparent;
+  border-color: #6366f1 transparent transparent transparent;
 }
 
 .progress .color2 span:before{
@@ -600,7 +600,7 @@ a:hover {
 
 /* --- footer --- */
 .footer {
-	background:#0D3245;
+	background:#6366f1;
 	padding:15px 22px;
 }
 
@@ -856,7 +856,7 @@ ul.social-network li a {
 
 a.btn-primary:hover {
 	background-color:#ddd;
-	color:#0D3245;
+	color:#6366f1;
 }
 
 .widget {
@@ -885,7 +885,7 @@ a.btn-primary:hover {
 }
 
 .widget .entry-meta span a:hover {
-	color:#0D3245;
+	color:#6366f1;
 }
 
 .widget h3 {
@@ -914,12 +914,12 @@ a.btn-primary:hover {
 }
 
 .blog_category li a:hover{
-  background:#0D3245;
+  background:#6366f1;
   color: #fff;
 }
 
  .badge:before {
-  border-color: transparent transparent transparent #0D3245;
+  border-color: transparent transparent transparent #6366f1;
   border-style: solid;
   border-width: 10px;
   bottom: -8px;
@@ -931,7 +931,7 @@ a.btn-primary:hover {
 }
 
 .badge {
-  background-color: #0D3245;
+  background-color: #6366f1;
   border-radius: 5px;
   color: #fff;
   padding: 8px;
@@ -953,7 +953,7 @@ a.btn-primary:hover {
 }
 
 ul.blog_archieve li a:hover{
-	color:#0D3245;
+	color:#6366f1;
 }
 
 .blog_archieve li:first-child {
@@ -1074,7 +1074,7 @@ ul.faq li > div h3 {
 }
 
 #publish_date {
-  background: #0D3245;
+  background: #6366f1;
   border-bottom: 5px solid #4e4e4e;
   color: #fff;
   padding: 5px 0;
